test/errors/error22.base
The variable 'x' could not be found
fun foo () {
   x = 0;
   ^
